--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: cpp
-compiler:
-  - gcc
-  - clang
-# Change this to your needs
+compiler: gcc
 install:
   - sudo apt-get update
   - sudo apt-get install libqt4-dev qt4-qmake
