--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
   - cat /proc/meminfo
   - qmake qrealRobots.pro
   - make -j2 
-  - make distclean
+  - git clean -dfx
   - qmake qrealTest.pro CONFIG+=debug
   - make -j2
   - ./bin/unittests/qrlibs_unittests
