--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 compiler: gcc
 install:
   - sudo apt-get update
-  - sudo apt-get install libqt4-dev qt4-qmake qt4-dev-tools gdb
+  - sudo apt-get install qt-sdk gdb
 
 script:
   - cat /proc/cpuinfo
