--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: cpp
 compiler: gcc
 install:
+  - sudo add-apt-repository ppa:canonical-qt5-edgers/qt5-proper
+  - sudo add-apt-repository ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update
   - sudo apt-get install qt-sdk gdb
 
