--- a/qrmc/templates/edge.template
+++ b/qrmc/templates/edge.template
@@ -2,7 +2,7 @@
 	public:
 		void init(QRectF &, QList<StatPoint> &, QList<StatLine> &,
 				ElementTitleFactoryInterface &, QList<ElementTitleInterface*> &,
-				SdfRendererInterface *, SdfRendererInterface *) {}
+				SdfRendererInterface *, SdfRendererInterface *, ElementRepoInterface *) {}
 
 		void init(ElementTitleFactoryInterface &factory, QList<ElementTitleInterface*> &titles)
 		{
