--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,16 @@ compiler: gcc
 install:
   - sudo add-apt-repository ppa:canonical-qt5-edgers/qt5-proper -y
   - sudo add-apt-repository ppa:ubuntu-sdk-team/ppa -y
-  - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu raring universe"
-  - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu raring main"
+  - sudo add-apt-repository ppa:smspillaz/verapp-latest
   - sudo apt-get update
   - sudo apt-get install libboost-system1.49.0 libboost-wave1.49.0 tcl8.5
   - sudo apt-get install vera++
   - sudo apt-get install qdbus qmlscene qt5-default qt5-qmake qtbase5-dev-tools qtchooser qtdeclarative5-dev xbitmaps xterm libqt5svg5-dev qttools5-dev -y
   
 script:
-  - vera++ -version
   - sudo sh buildScripts/vera++/CopyToVLib.sh
   - tclsh buildScripts/vera++/generatePaths.tcl
-  - touch log
-  - vera++ --error -profile allRules - <buildScripts/vera++/params | tee log
-  - tclsh buildScripts/vera++/checkErrors.tcl
+  - vera++ --error -profile allRules - <buildScripts/vera++/params
   - qmake qreal.pro
   - make -j2
   - qmake qrealRobots.pro
