--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ install:
   - sudo add-apt-repository ppa:canonical-qt5-edgers/qt5-proper -y
   - sudo add-apt-repository ppa:ubuntu-sdk-team/ppa -y
   - sudo add-apt-repository ppa:smspillaz/verapp-latest -y
+  - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu raring universe"
+  - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu raring main"
   - sudo apt-get update
   - sudo apt-get install libboost-system1.49.0 libboost-wave1.49.0 tcl8.5
   - sudo apt-get install vera++
