--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ install:
   - sudo apt-get install qdbus qmlscene qt5-default qt5-qmake qtbase5-dev-tools qtchooser qtdeclarative5-dev xbitmaps xterm libqt5svg5-dev qttools5-dev -y
   
 script:
-  - sudo sh buildScripts/vera++/CopyToVLib.sh
+  - sudo cp buildScripts/vera++/profiles/* /usr/lib/vera++/profiles/
+  - sudo cp buildScripts/vera++/rules/* /usr/lib/vera++/scripts/rules/
   - tclsh buildScripts/vera++/generatePaths.tcl
   - vera++ --error -p allRules <buildScripts/vera++/params
   - qmake qreal.pro
