--- a/qrmc/templates/edge.template
+++ b/qrmc/templates/edge.template
@@ -1,13 +1,19 @@
-	class @@ElementName@@ : public ElementImpl {
+	class @@ElementName@@ : public qReal::ElementImpl {
 	public:
-		void init(QRectF &, QList<StatPoint> &, QList<StatLine> &,
-				LabelFactoryInterface &, QList<LabelInterface*> &,
-				SdfRendererInterface *, SdfRendererInterface *, ElementRepoInterface *) {}
+		void init(QRectF &
+			, const PortFactoryInterface &
+			, QList<PortInterface *> &
+			, qReal::LabelFactoryInterface &
+			, QList<qReal::LabelInterface *> &
+			, qReal::SdfRendererInterface *
+			, qReal::ElementRepoInterface *) {}
 
-		void init(LabelFactoryInterface &factory, QList<LabelInterface*> &titles)
+		void init(qReal::LabelFactoryInterface &factory, QList<qReal::LabelInterface*> &titles)
 		{
 @@EdgeInit@@
 		}
+		
+		qReal::ElementImpl *clone() { return NULL; }
 
 		virtual ~@@ElementName@@() {}
 
@@ -24,6 +30,19 @@
 		bool minimizesToChildren() const { return false; }
 		bool isClass() { return false; }
 		bool maximizesChildren() const { return false; }
+		QStringList fromPortTypes() const
+		{
+			QStringList result;
+			result << "NonTyped";
+			return result;
+		}
+		QStringList toPortTypes() const
+		{
+			QStringList result;
+			result << "NonTyped";
+			return result;
+		}
+		bool createChildrenFromMenu() const { return false; }
 		bool isPort() const { return false; }
 		bool hasPin() const { return false; }
 		bool isResizeable() const { return true; }
@@ -35,8 +54,7 @@
 			QList<double> list;
 			list << 0 << 0 << 0 << 0;
 			return list;
-		}
-		bool hasPorts() const { return false; }
+		}                                      
 		Qt::PenStyle getPenStyle() const { return @@LineType@@; }
 		QStringList bonusContextMenuFields() const
 		{
@@ -66,7 +84,7 @@
 			painter->setBrush(old);
 		}
 
-		void updateData(ElementRepoInterface *repo) const
+		void updateData(qReal::ElementRepoInterface *repo) const
 		{
 @@UpdateData@@
 		}
