--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ script:
   - vera++ --error -p allRules --root buildScripts/vera++ <buildScripts/vera++/params
   - qmake qreal.pro
   - make -j2
+  - qmake qrtest/editorPluginTestingFramework/editorPluginTestingFramework.pro
+  - make -j2
   - qmake qrealRobots.pro
   - make -j2
   - qmake qrealBP.pro
