--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,10 @@ script:
   - vera++ --error -p allRules --root buildScripts/vera++ <buildScripts/vera++/params
   - qmake qreal.pro
   - make -j2
-  - qmake qrtest/editorPluginTestingFramework/editorPluginTestingFramework.pro
+  - cd ./qrtest/editorPluginTestingFramework
+  - qmake editorPluginTestingFramework.pro
   - make -j2
+  - cd ../../
   - qmake qrealRobots.pro
   - make -j2
   - qmake qrealBP.pro
