--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ install:
   - sudo add-apt-repository ppa:smspillaz/verapp-latest -y
   - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu raring universe"
   - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu raring main"
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update
   - sudo apt-get install libboost-system1.49.0 libboost-wave1.49.0 tcl8.5
   - sudo apt-get install vera++
   - sudo apt-get install qdbus qmlscene qt5-default qt5-qmake qtbase5-dev-tools qtchooser qtdeclarative5-dev xbitmaps xterm libqt5svg5-dev qttools5-dev qtscript5-dev -y
+  - sudo apt-get install gcc-4.8
   - sudo apt-get install xvfb
   - Xvfb :0 &
   - export DISPLAY=:0
