--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
   - export DISPLAY=:0
 
 script:
+  - gcc --version
   - tclsh buildScripts/vera++/generatePaths.tcl
   - vera++ --error -p allRules --root buildScripts/vera++ <buildScripts/vera++/params
   - qmake qreal.pro
